--- a/public/404.html
+++ b/public/404.html
@@ -18,9 +18,6 @@
 
 <body>
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
-  </div>
+     <a href="http://www.cloudspokes.com"><img src="http://cloudspokes.s3.amazonaws.com/errorPages/clydesfail.jpeg" /></a>
 </body>
 </html>
