small change for 404 for member not found

--- a/public/member-not-found.html
+++ b/public/member-not-found.html
@@ -1,8 +1,8 @@
 <div class="page-heading"><h2 class="melbourne">Member Not Found</h2></div>
 
 <div>
-	<%= image_tag "fail-clyde.png", :alt => "Sad Clyde", :style => 'float:left;margin:25px' %>
+	<%= image_tag "http://cloudspokes.s3.amazonaws.com/errorPages/clydesfail.jpeg", :width => 350, :alt => "Sad Clyde", :style => 'float:left;margin:50px' %>
 </div>
 <div style="float:left;margin:25px;width:400px">
-	<p style="font-size:medium;padding-top:25px">Clyde says, "The member you are looking for could not be found."</p>
+	<p style="font-size:medium;padding-top:50px">Clyde says, "The member you are looking for could not be found."</p>
 </div>
