--- a/public/404.html
+++ b/public/404.html
@@ -18,6 +18,6 @@
 
 <body>
   <!-- This file lives in public/404.html -->
-     <a href="http://www.cloudspokes.com"><img src="http://cloudspokes.s3.amazonaws.com/errorPages/clydesfail.jpeg" /></a>
+     <div style="margin: 15px"><a href="http://www.cloudspokes.com"><img src="http://cloudspokes.s3.amazonaws.com/errorPages/clydesfail.jpeg" /></a></div>
 </body>
 </html>
