--- a/public/404.html
+++ b/public/404.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
-     <div style="margin: 15px"><a href="http://www.cloudspokes.com"><img src="http://cloudspokes.s3.amazonaws.com/errorPages/clydesfail.jpeg" /></a></div>
+     <div style="margin: 15px"><a href="/"><img src="http://cs-public.s3.amazonaws.com/clydsfail.png" /></a></div>
 </body>
 </html>
